Fix header, footer z-index

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,9 @@
 @import url(components.css);
 
 .footer {
+    position: relative;
     width: 100%;
+    z-index: 100;
 }
 
 .footer-content {
