--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,8 @@ main {
     width: 100%;
     height: 5em;
     background-color: var(--S750);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    z-index: 100;
 }
 
 .header-search {
@@ -142,6 +144,12 @@ main {
     }
 }
 
+.header-top-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 @media (max-width: 768px) {
     main {
         margin-top: 63px;
@@ -157,9 +165,6 @@ main {
     }
 
     .header-top-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         width: 100%;
     }
 
